_build/html/reports/Nakijken Assignment 2/boris/assignment2.err.log
Traceback (most recent call last):
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\site-packages\jupyter_cache\executors\utils.py", line 64, in single_nb_execution
    **kwargs,
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\site-packages\nbclient\client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
als we kijken naar de "parrelel categories" kunnen we zien dat er bijvorbeeld bij bepaalde combinaties van variabelen hogere fooien gegeven worden.
man -> roker -> vrijdag -> lunch hier zien we een hoge fooi.

in de boxplots kunnen we zien dat rokers over het algemeen iets meer fooi geven als we naar mean en median kijken.
female : smoker median = 2.68
        non-smoker median = 2.88
male : smoker median = 3
        non-smoker median = 2.74
het zijn wel geringe verschillen dus er is geen volledige zekerheid.
------------------

[1;36m  File [1;32m"C:\Users\joepl\AppData\Local\Temp\ipykernel_22744\2907769993.py"[1;36m, line [1;32m1[0m
[1;33m    als we kijken naar de "parrelel categories" kunnen we zien dat er bijvorbeeld bij bepaalde combinaties van variabelen hogere fooien gegeven worden.[0m
[1;37m         ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (2907769993.py, line 1)

